--- a/client/src/app/sandbox/sandbox.component.html
+++ b/client/src/app/sandbox/sandbox.component.html
@@ -11,10 +11,10 @@
 
     </textarea>
 
-    <a (click)="this.data.addTextObjectToSlide()" class="sandbox-add-btn-group grayAccent02 flex-col-evenly">
+    <!-- <a (click)="this.data.addTextObjectToSlide()" class="sandbox-add-btn-group grayAccent02 flex-col-evenly">
       <fa name="share"></fa>
       <p>Add text object <br> to slide</p>
-    </a>
+    </a> -->
   </div>
 
   <textarea class="sandbox-textarea" [(ngModel)]="this.data.textNotes">
