--- a/client/src/app/slide-editor/slide-editor.component.html
+++ b/client/src/app/slide-editor/slide-editor.component.html
@@ -1,6 +1,6 @@
 <div id="slide-editor-workspace">
   <div *ngIf="this.data.slides.length > 0" id="slide-render-area">
-    <div id="slide-render" [ngStyle]="this.getSlideRenderCss()">
+    <!-- <div id="slide-render" [ngStyle]="this.getSlideRenderCss()">
       <div *ngFor="let slideObject of this.data.slides[this.data.currentSlideIndex].slideObjects" 
       class="slide-object"
         [ngStyle]="slideObject.getCss()" 
@@ -21,7 +21,7 @@
           [src]="slideObject.imagePath" crossOrigin="anonymous">
 
       </div>
-    </div>
+    </div> -->
   </div>
 
 
@@ -47,9 +47,9 @@
 
       <div class="flex-row-evenly">
         <p>{{this.data.documentSize.width}}px X {{this.data.documentSize.height}}px</p>
-      </div>
 
       <fa class="flex-row-evenly" [name]="this.showRenderOverflow ? 'object-ungroup' : 'object-group'" (click)="this.toggleRenderOverflow()"></fa>
+    </div>
 
     </div>
 
