--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -3,10 +3,8 @@
   <toolbar id="toolbar" class="grayAccent01 flex-row-between"></toolbar>
   <toolbar-secondary id="toolbar-secondary"></toolbar-secondary>
   <styler id="styler" class="accent05 flex-col-start"></styler>
-
   <sandbox id="sandbox" class="accent05"></sandbox>
-  <div id="resizer"></div>
-  <slide-editor id="slide-editor" class="accent05 flex-col-evenly"></slide-editor>
+  <slide-editor id="slide-editor" class="accent05"></slide-editor>
 
 </div>
 <app-dialog></app-dialog>
