--- a/client/src/app/toolbar/toolbar.component.css
+++ b/client/src/app/toolbar/toolbar.component.css
@@ -1,8 +1,8 @@
 .toolbar-btn-group {
-    width: 75px;
-    height: 8vh;
-    margin: 0 5px;
-    padding: 0 20px;
+    width: auto;
+    height: 100%;
+    margin: 0 auto;
+    padding: 15px;
 }
 
 .toolbar-btn-group:hover {
@@ -18,7 +18,7 @@
 .toolbar-btn-group p {
     text-align: center;
     font-size: 0.7rem;
-    margin: 0;
+    margin: 3px auto 0 auto;
     padding: 0;
     white-space: nowrap;
 }
@@ -26,15 +26,17 @@
 #toolbar-style-selector {
     box-sizing: border-box;
     height: 90%;
+    width: auto;
     overflow-x: hidden;
     overflow-y: auto;
     padding: 5px;
     flex-grow: 1;
+    margin: 0 5px;
 }
 
 .toolbar-style-btn {
     text-decoration: none;
-    width: 150px;
+    width: 125px;
     height: 25px;
     border-radius: 5px;
     margin-right: 7px;
@@ -45,7 +47,7 @@
     justify-content: center;
     align-items: center;
     overflow: hidden;
-    font-size: 0.9rem;
+    font-size: 0.7rem;
     border: 2px transparent solid;
     outline: none;
 }
@@ -57,11 +59,10 @@
 .selected {
     background: rgb(156, 172, 149);
     border: 2px white solid;
-    width: 150px;
 }
 
-@media screen and (min-width: 1200px) {
+  @media only screen and (max-width: 999px) {
     .toolbar-btn-group p {
-       font-size: 0.8rem;
+        display: none;
     }
-  }
+}
