--- a/client/src/app/sandbox/sandbox.component.css
+++ b/client/src/app/sandbox/sandbox.component.css
@@ -1,11 +1,22 @@
+#sandbox-container {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
 
 .sandbox-preview-area {
     width: 100%;
+    height: 60%;
+    position: absolute;
+    min-width: 300px;
+    top: 0;
+    right: 0;
     background: linear-gradient(to bottom right, rgb(179, 179, 179), rgb(241, 241, 241));
 }
 
 .sandbox-preview-container {
     border: 2px dashed gray;
+    max-width: 90%;
 }
 
 .sandbox-preview-container p {
@@ -21,10 +32,30 @@
     border-top: 3px rgb(65, 65, 65) solid;
     border-bottom: 3px rgb(65, 65, 65) solid;
     width: 100%;
+    height: 10%;
+    position: absolute;
+    top: 60%;
+    right: 0;
+    min-width: 300px;
+}
+
+#sandbox-textarea{
+    flex-grow: 1;
+    height: 100%;
+    resize: none;
+    outline: none;
+    padding: 0;
+    font-family: 'Helvetica', sans-serif;
+    border: 0;
+    resize: none;
+    outline: none;
+    box-sizing: border-box;
+    padding: 10px;
 }
 
 .sandbox-add-btn-group {
-    width: 125px;
+    min-width: 100px;
+    width: 100px;
     height: 100%;
 }
 
@@ -35,13 +66,16 @@
 .sandbox-add-btn-group p {
     text-align: center;
     font-size: 0.7rem;
-    font-size: 0.9vw;
     max-width: 80%;
 }
 
-.sandbox-textarea {
-    height: 100%;
-    flex-grow: 1;
+#notes-textarea {
+    min-width: 300px;
+    height: 30%;
+    width: 100%;
+    position: absolute;
+    top: 70%;
+    right: 0;
     padding: 0;
     font-family: 'Helvetica', sans-serif;
     border: 0;
@@ -55,18 +89,22 @@
 /*  text sandbox  */
 #text-sandbox {
     width: 100%;
-    display: grid;
-    grid-template-rows: 43vh 10vh 33vh;
+    height: 100%;
+    /* display: grid;
+    grid-template-rows: 43vh 10vh 33vh; */
     margin: 0;
     padding: 0;
+    position: relative;
 }
 
 #image-sandbox {
     width: 100%;
+    height: 100%;
     display: grid;
     grid-template-rows: 43vh 10vh 33vh;
     margin: 0;
     padding: 0;
+    position: relative;
 }
 
 #import-container {
@@ -132,9 +170,9 @@ input[type="file"] {
 }
 
 @media screen and (min-width: 1200px) {
-    .sandbox-toolbar-btn-group p,
+    /* .sandbox-toolbar-btn-group p,
     .sandbox-add-btn-group p {
        font-size: 0.8rem;
-    }
+    } */
   }
 
