--- a/client/src/app/slide-editor/slide-editor.component.css
+++ b/client/src/app/slide-editor/slide-editor.component.css
@@ -1,14 +1,16 @@
 #slide-editor-workspace {
-    width: 41vw;
+    width: 100%;
+    height: 100%;
+    min-width: 375px;
     display: grid;
-    grid-template-rows: 43vh 43vh;
+    grid-template-rows: 1fr 1fr;
     margin: 0;
     padding: 0;
 } 
 
 #slide-render-area {
     height: 100%;
-    width: 41vw;
+    width: 100%;
     overflow: scroll;
     background: linear-gradient(to bottom right, rgb(16, 16, 17), rgb(53, 53, 53));
 }
@@ -35,6 +37,8 @@
 #slide-control {
     height: 100%;
     width: 100%;
+    display: grid;
+    grid-template-rows: auto 1fr;
 }
 
 #slide-control-toolbar {
