--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -10,17 +10,17 @@
   </div>
 
   <div id="styler" #styler>
-  <styler class="accent05 flex-col-start"></styler>
+  <styler></styler>
   </div>
 
   <div id="sandbox" #sandbox>
-  <sandbox class="accent05"></sandbox>
+  <sandbox></sandbox>
   </div>
 
   <div id="resizer" #resizer></div>
   
   <div id="slide-editor" #slideEditor>
-  <slide-editor class="accent05"></slide-editor>
+  <slide-editor></slide-editor>
 </div>
 
 </div>
