--- a/client/src/app/slide-editor/slide-editor.component.css
+++ b/client/src/app/slide-editor/slide-editor.component.css
@@ -13,6 +13,7 @@
     width: 100%;
     overflow: scroll;
     background: linear-gradient(to bottom right, rgb(16, 16, 17), rgb(53, 53, 53));
+    position: relative;
 }
 
 .slide-object {
