--- a/client/src/app/styler/styler.component.html
+++ b/client/src/app/styler/styler.component.html
@@ -1,9 +1,9 @@
 
-<div class="style-card-container" *ngIf="this.data.viewTextElements">
+<div class="style-card-container accent05" *ngIf="this.data.viewTextElements">
   <text-style-card [textStyle]="textStyle" *ngFor="let textStyle of this.data.textStyles"></text-style-card>
 </div>
 
-<div class="style-card-container" *ngIf="this.data.viewImageElements">
+<div class="style-card-container accent05" *ngIf="this.data.viewImageElements">
   <image-style-card [imageStyle]="imageStyle" *ngFor="let imageStyle of this.data.imageStyles"></image-style-card>
 </div>
 
