--- a/client/src/app/styler/styler.component.css
+++ b/client/src/app/styler/styler.component.css
@@ -1,7 +1,9 @@
 .style-card-container {
     width: 100%;
     height: 100%;
+    overflow-y: scroll;
     padding-bottom: 300px;
+    box-sizing: border-box;
 }
 
 
