--- a/client/src/app/toolbar/toolbar.component.css
+++ b/client/src/app/toolbar/toolbar.component.css
@@ -2,6 +2,7 @@
     width: 100%;
     height: 100%;
     display: grid;
+    grid-template-rows:  minmax(50px, 7vh);
     grid-template-columns: 1fr 50vw 1fr;
     justify-content: space-evenly;
     align-items: center;
@@ -22,7 +23,7 @@
 }
 
 .toolbar-btn-group fa {
-    font-size: 3vh;
+    font-size: 1.5rem;
     margin: 0;
     padding: 0;
 }
