Added resizer to slide-editor

--- a/client/src/app/slide-editor/slide-editor.component.html
+++ b/client/src/app/slide-editor/slide-editor.component.html
@@ -24,6 +24,10 @@
     </div>
   </div>
 
+  <div id="slide-editor-resizer">
+    
+  </div>
+
 
   <div *ngIf="this.data.slides.length > 0" id="slide-control" class="grayAccent02">
 
