--- a/client/src/app/slide-editor/slide-editor.component.css
+++ b/client/src/app/slide-editor/slide-editor.component.css
@@ -3,7 +3,7 @@
     height: 100%;
     min-width: 375px;
     display: grid;
-    grid-template-rows: 1fr 1fr;
+    grid-template-rows: 1fr 10px 1fr;
     margin: 0;
     padding: 0;
 } 
@@ -14,6 +14,23 @@
     overflow: scroll;
     background: linear-gradient(to bottom right, rgb(16, 16, 17), rgb(53, 53, 53));
     position: relative;
+}
+
+#slide-editor-resizer {
+    width: 100%;
+    height: 100%;
+    background: gray;
+}
+
+#slide-editor-resizer:hover {
+    cursor: row-resize;
+}
+
+#slide-control {
+    height: 100%;
+    width: 100%;
+    display: grid;
+    grid-template-rows: auto 1fr;
 }
 
 .slide-object {
@@ -35,12 +52,7 @@
     margin-left: -2px;
 }
 
-#slide-control {
-    height: 100%;
-    width: 100%;
-    display: grid;
-    grid-template-rows: auto 1fr;
-}
+
 
 #slide-control-toolbar {
     width: 100%;
