--- a/client/src/app/sandbox/sandbox.component.css
+++ b/client/src/app/sandbox/sandbox.component.css
@@ -1,22 +1,66 @@
+
+/*  text sandbox  */
 #sandbox-container {
-    position: relative;
     width: 100%;
     height: 100%;
+    display: grid;
+    grid-template-rows: 500px 10px 1fr;
+    grid-template-areas:
+        "top"
+        "middle"
+        "bottom";
+    margin: 0;
+    padding: 0;
+    position: absolute;
+    top: 0;
+    right: 0;
 }
 
 .sandbox-preview-area {
+    grid-area: top;
     width: 100%;
-    height: 60%;
-    position: absolute;
+    height: 100%;
     min-width: 300px;
-    top: 0;
-    right: 0;
     background: linear-gradient(to bottom right, rgb(179, 179, 179), rgb(241, 241, 241));
+    min-height: 200px;
+    position: relative;
 }
+
+#sandbox-resizer {
+    grid-area: middle;
+    width: 100%;
+    height: 100%;
+    background: gray;
+}
+
+#sandbox-resizer:hover{
+    cursor:row-resize;
+}
+
+#text-input-container {
+    height: 100%;
+    width: 100%;
+    grid-area: bottom;
+    position: relative;
+}
+
+#image-input-container {
+    display: grid;
+    grid-template-rows: auto 1fr;
+    position: relative;
+}
+
+.sandbox-middle-bar { 
+    box-sizing: border-box;
+    border-top: 3px rgb(65, 65, 65) solid;
+    border-bottom: 3px rgb(65, 65, 65) solid;
+    width: 100%;
+    height: 75px;
+}
+
 
 .sandbox-preview-container {
     border: 2px dashed gray;
-    max-width: 90%;
 }
 
 .sandbox-preview-container p {
@@ -27,17 +71,6 @@
     user-select: none;
 }
 
-.sandbox-middle-bar { 
-    box-sizing: border-box;
-    border-top: 3px rgb(65, 65, 65) solid;
-    border-bottom: 3px rgb(65, 65, 65) solid;
-    width: 100%;
-    height: 10%;
-    position: absolute;
-    top: 60%;
-    right: 0;
-    min-width: 300px;
-}
 
 #sandbox-textarea{
     flex-grow: 1;
@@ -47,7 +80,6 @@
     padding: 0;
     font-family: 'Helvetica', sans-serif;
     border: 0;
-    resize: none;
     outline: none;
     box-sizing: border-box;
     padding: 10px;
@@ -71,11 +103,8 @@
 
 #notes-textarea {
     min-width: 300px;
-    height: 30%;
+    height: 100%;
     width: 100%;
-    position: absolute;
-    top: 70%;
-    right: 0;
     padding: 0;
     font-family: 'Helvetica', sans-serif;
     border: 0;
@@ -84,27 +113,6 @@
     box-sizing: border-box;
     padding: 10px;
     background: rgb(230, 230, 230);
-}
-
-/*  text sandbox  */
-#text-sandbox {
-    width: 100%;
-    height: 100%;
-    /* display: grid;
-    grid-template-rows: 43vh 10vh 33vh; */
-    margin: 0;
-    padding: 0;
-    position: relative;
-}
-
-#image-sandbox {
-    width: 100%;
-    height: 100%;
-    display: grid;
-    grid-template-rows: 43vh 10vh 33vh;
-    margin: 0;
-    padding: 0;
-    position: relative;
 }
 
 #import-container {
@@ -123,11 +131,9 @@ input[type="file"] {
     padding: 0;
 }
 
-
 #gallery {
     width: 100%;
-    height: auto;
-    display: static;
+    height: 100%;
     overflow: auto;
     margin: 0;
     padding: 0;
