--- a/client/src/app/toolbar/toolbar.component.html
+++ b/client/src/app/toolbar/toolbar.component.html
@@ -16,15 +16,15 @@
     <!-- Text styles -->
     <div *ngIf="this.data.viewTextElements">
       <button *ngFor="let textStyle of this.data.textStyles" (click)="this.data.selectStyle('text', textStyle.id);"
-        class="greenAccent01 toolbar-style-btn" [class.selected]="isSelected(textStyle)">{{textStyle.name.substring(0,
-        20)}}</button>
+        class="greenAccent01 toolbar-style-btn" [class.selected]="isSelected(textStyle)"><p>{{textStyle.name.substring(0,
+        20)}}</p></button>
     </div>
 
     <!-- Image styles -->
     <div *ngIf="this.data.viewImageElements">
       <button *ngFor="let imageStyle of this.data.imageStyles" (click)="this.data.selectStyle('image', imageStyle.id);"
-        class="greenAccent01 toolbar-style-btn" [class.selected]="isSelected(imageStyle)">{{imageStyle.name.substring(0,
-        20)}}</button>
+        class="greenAccent01 toolbar-style-btn" [class.selected]="isSelected(imageStyle)"><p>{{imageStyle.name.substring(0,
+        20)}}</p></button>
     </div>
   </div>
 
