--- a/client/src/app/sandbox/sandbox.component.css
+++ b/client/src/app/sandbox/sandbox.component.css
@@ -23,7 +23,9 @@
     min-width: 300px;
     background: linear-gradient(to bottom right, rgb(179, 179, 179), rgb(241, 241, 241));
     min-height: 200px;
-    position: relative;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
 #sandbox-resizer {
@@ -48,6 +50,9 @@
 #image-input-container {
     display: grid;
     grid-template-rows: auto 1fr;
+    height: 100%;
+    width: 100%;
+    grid-area: bottom;
     position: relative;
 }
 
@@ -57,6 +62,7 @@
     border-bottom: 3px rgb(65, 65, 65) solid;
     width: 100%;
     height: 75px;
+    position: relative;
 }
 
 
@@ -70,6 +76,7 @@
     overflow-wrap: break-word;
     word-wrap: break-word;
     user-select: none;
+    position: relative;
 }
 
 
@@ -84,6 +91,7 @@
     outline: none;
     box-sizing: border-box;
     padding: 10px;
+    position: relative;
 }
 
 .sandbox-add-btn-group {
@@ -118,6 +126,8 @@
     box-sizing: border-box;
     padding: 10px;
     background: rgb(230, 230, 230);
+    position: relative;
+
 }
 
 #import-container {
@@ -142,6 +152,9 @@ input[type="file"] {
     overflow: auto;
     margin: 0;
     padding: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
 .gallery-img-container {
