--- a/client/src/app/sandbox/sandbox.component.css
+++ b/client/src/app/sandbox/sandbox.component.css
@@ -41,6 +41,11 @@
 }
 
 #text-input-container {
+    display: grid;
+    grid-template-rows: auto 1fr;
+    grid-template-areas:
+        "middlebar"
+        "notes";
     height: 100%;
     width: 100%;
     grid-area: bottom;
@@ -50,6 +55,9 @@
 #image-input-container {
     display: grid;
     grid-template-rows: auto 1fr;
+    grid-template-areas:
+        "middlebar"
+        "gallery";
     height: 100%;
     width: 100%;
     grid-area: bottom;
@@ -57,6 +65,7 @@
 }
 
 .sandbox-middle-bar { 
+    grid-area: middlebar;
     box-sizing: border-box;
     border-top: 3px rgb(65, 65, 65) solid;
     border-bottom: 3px rgb(65, 65, 65) solid;
@@ -115,6 +124,7 @@
 }
 
 #notes-textarea {
+    grid-area: notes;
     min-width: 300px;
     height: 100%;
     width: 100%;
@@ -126,7 +136,9 @@
     box-sizing: border-box;
     padding: 10px;
     background: rgb(230, 230, 230);
-    position: relative;
+    position: absolute;
+    top: 0;
+    left: 0;
 
 }
 
@@ -147,6 +159,7 @@ input[type="file"] {
 }
 
 #gallery {
+    grid-area: gallery;
     width: 100%;
     height: 100%;
     overflow: auto;
